gramatica_latino.output
Grammar

    0 $accept: codigo $end

    1 codigo: sentencias

    2 sentencias: sentencia
    3           | sentencias sentencia

    4 sentencia: asignacion
    5          | imprimir

    6 asignacion: IDENTIFICADOR IGUAL expresion

    7 expresion: expresion SUMA tipos
    8          | expresion RESTA tipos
    9          | tipos

   10 tipos: IDENTIFICADOR
   11      | NUMERICO
   12      | NUMERICODECIMAL

   13 imprimir: IMPRIMIR APERTURAPARENTESIS expresion CIERREPARENTESIS


Terminals, with rules where they appear

$end (0) 0
error (256)
SUMA (258) 7
RESTA (259) 8
IGUAL (260) 6
APERTURAPARENTESIS (261) 13
CIERREPARENTESIS (262) 13
IMPRIMIR (263) 13
NUMERICO (264) 11
NUMERICODECIMAL (265) 12
IDENTIFICADOR (266) 6 10


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
codigo (13)
    on left: 1, on right: 0
sentencias (14)
    on left: 2 3, on right: 1 3
sentencia (15)
    on left: 4 5, on right: 2 3
asignacion (16)
    on left: 6, on right: 4
expresion (17)
    on left: 7 8 9, on right: 6 7 8 13
tipos (18)
    on left: 10 11 12, on right: 7 8 9
imprimir (19)
    on left: 13, on right: 5


state 0

    0 $accept: . codigo $end

    IMPRIMIR       shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2

    codigo      go to state 3
    sentencias  go to state 4
    sentencia   go to state 5
    asignacion  go to state 6
    imprimir    go to state 7


state 1

   13 imprimir: IMPRIMIR . APERTURAPARENTESIS expresion CIERREPARENTESIS

    APERTURAPARENTESIS  shift, and go to state 8


state 2

    6 asignacion: IDENTIFICADOR . IGUAL expresion

    IGUAL  shift, and go to state 9


state 3

    0 $accept: codigo . $end

    $end  shift, and go to state 10


state 4

    1 codigo: sentencias .
    3 sentencias: sentencias . sentencia

    IMPRIMIR       shift, and go to state 1
    IDENTIFICADOR  shift, and go to state 2

    $default  reduce using rule 1 (codigo)

    sentencia   go to state 11
    asignacion  go to state 6
    imprimir    go to state 7


state 5

    2 sentencias: sentencia .

    $default  reduce using rule 2 (sentencias)


state 6

    4 sentencia: asignacion .

    $default  reduce using rule 4 (sentencia)


state 7

    5 sentencia: imprimir .

    $default  reduce using rule 5 (sentencia)


state 8

   13 imprimir: IMPRIMIR APERTURAPARENTESIS . expresion CIERREPARENTESIS

    NUMERICO         shift, and go to state 12
    NUMERICODECIMAL  shift, and go to state 13
    IDENTIFICADOR    shift, and go to state 14

    expresion  go to state 15
    tipos      go to state 16


state 9

    6 asignacion: IDENTIFICADOR IGUAL . expresion

    NUMERICO         shift, and go to state 12
    NUMERICODECIMAL  shift, and go to state 13
    IDENTIFICADOR    shift, and go to state 14

    expresion  go to state 17
    tipos      go to state 16


state 10

    0 $accept: codigo $end .

    $default  accept


state 11

    3 sentencias: sentencias sentencia .

    $default  reduce using rule 3 (sentencias)


state 12

   11 tipos: NUMERICO .

    $default  reduce using rule 11 (tipos)


state 13

   12 tipos: NUMERICODECIMAL .

    $default  reduce using rule 12 (tipos)


state 14

   10 tipos: IDENTIFICADOR .

    $default  reduce using rule 10 (tipos)


state 15

    7 expresion: expresion . SUMA tipos
    8          | expresion . RESTA tipos
   13 imprimir: IMPRIMIR APERTURAPARENTESIS expresion . CIERREPARENTESIS

    SUMA              shift, and go to state 18
    RESTA             shift, and go to state 19
    CIERREPARENTESIS  shift, and go to state 20


state 16

    9 expresion: tipos .

    $default  reduce using rule 9 (expresion)


state 17

    6 asignacion: IDENTIFICADOR IGUAL expresion .
    7 expresion: expresion . SUMA tipos
    8          | expresion . RESTA tipos

    SUMA   shift, and go to state 18
    RESTA  shift, and go to state 19

    $default  reduce using rule 6 (asignacion)


state 18

    7 expresion: expresion SUMA . tipos

    NUMERICO         shift, and go to state 12
    NUMERICODECIMAL  shift, and go to state 13
    IDENTIFICADOR    shift, and go to state 14

    tipos  go to state 21


state 19

    8 expresion: expresion RESTA . tipos

    NUMERICO         shift, and go to state 12
    NUMERICODECIMAL  shift, and go to state 13
    IDENTIFICADOR    shift, and go to state 14

    tipos  go to state 22


state 20

   13 imprimir: IMPRIMIR APERTURAPARENTESIS expresion CIERREPARENTESIS .

    $default  reduce using rule 13 (imprimir)


state 21

    7 expresion: expresion SUMA tipos .

    $default  reduce using rule 7 (expresion)


state 22

    8 expresion: expresion RESTA tipos .

    $default  reduce using rule 8 (expresion)
